src/test/deca/syntax/valid/synt/float_hex_assign_to_float.deca
/*
    Description : Assignation d'un flottant en notation hexadécimale à un flottant

    Résultat : OK
*/
{
    float b = 0XAa.FFP+0F;
    println(b);
}
