src/test/deca/syntax/invalid/synt/positive_float_to_int_conv.deca
// @expected_output deca:8:20: value cannot be stored as an integer value
/**
    Description: test sur la gestion d'erreur sur la conversion d'un flottant négatif en dehors des bornes d'un entier

    Résultat : à définir...
*/
{
    int x = (float)(40000000000);
}
